--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -29,12 +33,23 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
-    implementation 'com.google.firebase:firebase-database:19.2.0'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-messaging:20.1.0'
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.5'
+
+
+    //if you want to update these libraries first you have to convert the project to androidX
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+//    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+//    implementation 'com.google.firebase:firebase-messaging:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+//    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.firebase:firebase-client-android:2.5.2'
+//    implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
@@ -48,7 +63,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    //implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.github.armcha:SpaceNavigationView:1.6.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     /////////stripe////////
